RESOLVED FIXED302072
[WPE][MSE][GStreamer] Fix QuotaExceededError for init segment when no text limit specified
https://bugs.webkit.org/show_bug.cgi?id=302072
Summary [WPE][MSE][GStreamer] Fix QuotaExceededError for init segment when no text li...
Vivienne Watermeier
Reported 2025-11-06 03:18:29 PST
.
Attachments
Vivienne Watermeier
Comment 1 2025-11-06 03:31:38 PST
EWS
Comment 2 2025-11-11 03:04:21 PST
Committed 302839@main (f2932ed881fb): <https://commits.webkit.org/302839@main> Reviewed commits have been landed. Closing PR #53517 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-11-11 03:05:13 PST
Note You need to log in before you can comment on or make changes to this bug.