[WPE][MSE][GStreamer] Fix QuotaExceededError for init segment when no text limit specified https://bugs.webkit.org/show_bug.cgi?id=302072

Reviewed by Philippe Normand and Alicia Boya Garcia.

Ignore missing "Text" limit in MSE_MAX_BUFFER_SIZE env when calculating max buffer size
for init segment.
With current impl, missing any of track type A/V/T from MSE_MAX_BUFFER_SIZE causes WebKit
to fallback to default value from HTMLMediaElement/settings that is ~15MB for WPE.
Providing higher video and audio limits in the env we can still end up in QuotaExceededError
because of that.

Assume video and audio limits are enough to calculate accumulative max buffer size
for any type of track.

Original author: Andrzej Surdej <Andrzej_Surdej@comcast.com>
See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1578

* Source/WebCore/platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.cpp:
(WebCore::SourceBufferPrivateGStreamer::platformMaximumBufferSize const):

Canonical link: https://commits.webkit.org/302839@main