Source/WebCore/platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.cpp
@@ -370,11 +370,12 @@ size_t SourceBufferPrivateGStreamer::platformMaximumBufferSize() const
         }
     });
 
-    // If any track type size isn't specified, we consider that it has no limit and the values from the
-    // element have to be used. Otherwise, the track limits are accumulative. If everything is specified
-    // but there's no track (eg: because we're processing an init segment that we don't know yet which
-    // kind of track(s) is going to generate) we assume that the 3 kind of tracks might appear (audio,
-    // video, text) and use all the accumulated limits at once to make room for any possible outcome.
+    // If either audio or video track type size isn't specified, we consider that it has no limit
+    // and the values from the element have to be used. Otherwise, the track limits are accumulative.
+    // If at least video and audio are specified but there's no track (eg: because we're processing
+    // an init segment that we don't know yet which kind of track(s) is going to generate) we assume
+    // that the 3 kind of tracks might appear (audio, video, text) and use all the accumulated
+    // limits at once to make room for any possible outcome.
     do {
         bool hasVideo = false;
         bool hasAudio = false;
@@ -412,7 +413,7 @@ size_t SourceBufferPrivateGStreamer::platformMaximumBufferSize() const
         if (hasText || m_tracks.empty()) {
             if (maxBufferSizeText)
                 bufferSize += maxBufferSizeText;
-            else
+            else if (hasText)
                 break;
         }
         if (bufferSize)
